/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package dominio;

/**
 *
 * @author marti
 */
public enum EstadoPedido {
    NO_CONFIRMADO,
    CONFIRMADO,
    EN_PROCESO,
    FINALIZADO,
    ENTREGADO
}
