/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package excepciones;

/**
 *
 * @author marti
 */
public class PollomorfismoException extends Exception{

    public PollomorfismoException(String message) {
        super(message);
    }
    
}
