
package observador;


public interface Observador {

    public void actualizar(Observable origen, Object evento);
    
}
